--- a/Wrap.xcodeproj/xcshareddata/xcschemes/Wrap-tvOS.xcscheme
+++ b/Wrap.xcodeproj/xcshareddata/xcschemes/Wrap-tvOS.xcscheme
@@ -32,9 +32,9 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "52D6D9851BEFF229002C0205"
-               BuildableName = "Wrap.xctest"
-               BlueprintName = "WrapTests"
+               BlueprintIdentifier = "52B84B741DA1525500A7F4E7"
+               BuildableName = "WrapTests-tvOS.xctest"
+               BlueprintName = "WrapTests-tvOS"
                ReferencedContainer = "container:Wrap.xcodeproj">
             </BuildableReference>
          </TestableReference>
